opzetje voor set_styles.
